<resources>
    <string name="app_name">DrawerMenu</string>
    <string name="name">Ibrahim Mrq</string>
    <string name="power_by">Power By: Ibrahim Mrq</string>
    <string name="phone">+972592440530</string>

    <string name="favorite">Favorite</string>
    <string name="setting">Setting</string>
    <string name="contact_us">Contact Us</string>

    <string name="wallet">Wallet</string>
    <string name="points">Points</string>
    <string name="my_orders">My Orders</string>
    <string name="notification">Notifications</string>
    <string name="account">Account</string>
    <string name="home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>